--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="capture">capture</string>
+    <string name="compass_dial">Compass Dial</string>
+    <string name="title_activity_n">n</string>
+    <string name="compass_hands">Compass Hands</string>
+    <string name="result_text_default">"Please focus camera to QR Code"</string>
 </resources>
